WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
300863
[Cocoa] "Classic" Caption Style does not display in Monospace font
https://bugs.webkit.org/show_bug.cgi?id=300863
Summary
[Cocoa] "Classic" Caption Style does not display in Monospace font
Jer Noble
Reported
2025-10-15 21:50:36 PDT
[Cocoa] "Classic" Caption Style does not display in Monospace font
Attachments
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2025-10-15 21:50:38 PDT
<
rdar://problem/162547048
>
Jer Noble
Comment 2
2025-10-15 21:59:49 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/52450
EWS
Comment 3
2025-10-16 17:03:22 PDT
Committed
301678@main
(cd1ce52d51cf): <
https://commits.webkit.org/301678@main
> Reviewed commits have been landed. Closing PR #52450 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug